...
            alignment: .leading,
            spacing: 28
        ) {
            
            // MARK: TITLE
            Text(
                "Do you have a Data Plan?",
                comment: "Prompt user to select if they have a data plan in User Guide"
            )
            .textStyle(
                foregroundColor: .onSecondary,
                font: .semibold,
                size: 22
...
            // MARK: ACTIONS
            Spacer(minLength: 0)
            
            HStack(spacing: 18) {
                
                LargeButtonView(
                    title: "Yep",
                    hasOutline: true,
                    id: "Yep",
                    action: planAction
                )
                
                LargeButtonView(
                    title: "Nope",
                    id: "Nope",
                    action: nonPlanAction
                )

            } //: VStack
            .fillMaxWidth()
...
