...
            VStack(
                alignment: .leading,
                spacing: 28
            ) {
                
                Text(
                    "Data Pill will just monitor and track your daily mobile data.",
                    comment: "The description for Non Data Plan selection"
                )
                
                Text(
                    "If you ever subscribe to a plan in the future, toggle Data Plan.",
                    comment: "The description for Non Data Plan selection"
                )
                    
            } //: VStack
            .textStyle(
                foregroundColor: .onSecondary,
...
